<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="25dip"
    tools:context=".ASudoku" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="20sp" />


    <Button
            android:id="@+id/button_new_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_game" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_continue" />


    <Button
        android:id="@+id/button_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_info" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_exit" />

</LinearLayout>